--- a/portfolio/Client/Pages/Skills.razor
+++ b/portfolio/Client/Pages/Skills.razor
@@ -34,6 +34,7 @@
                             <img alt="BLAZOR WASM" src="https://img.shields.io/badge/BLAZOR%20WASM-%23563D7C.svg?style=for-the-badge&logo=Blazor&logoColor=white">
                             <img alt="MUDBLAZOR" src="https://img.shields.io/badge/MUDBLAZOR-%23563D7C.svg?style=for-the-badge&logo=MudBlazor&logoColor=white">
                             <img alt="REACT" src="https://img.shields.io/badge/REACT--Aprendiendo-%232B2F33.svg?style=for-the-badge&logo=react&logoColor=%2361DAFB">
+                            <img alt="Asp.Net" src="https://img.shields.io/badge/Asp%20.Net-%232671E5.svg?style=for-the-badge&logo=.net&logoColor=white">
                             <img alt="WINDOWS FORMS" src="https://img.shields.io/badge/Windows%20Forms-563D7C.svg?style=for-the-badge&logo=visual%20studio&logoColor=white">
                         </p>
                         <MudText Typo="Typo.h6" Style="margin-bottom:8px;">SOFTWARE Y HERRAMIENTAS</MudText>
