--- a/portfolio/Client/Pages/Portfolio.razor
+++ b/portfolio/Client/Pages/Portfolio.razor
@@ -15,53 +15,29 @@
         <div class="contenido-seccion">
             <h2>PORTFOLIO</h2>
             <div class="galeria">
-                <div class="proyecto"><a href="https://github.com/JuanManuel753/Proyecto-Entrada-y-Salida" target="_blank">
+                <div  class="proyecto"><a href="https://github.com/JuanManuel753/Proyecto-Entrada-y-Salida" target="_blank">
                     <img src="img/Portfolio/Proyecto E-S.jpg" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <MudText Typo="Typo.h6">Proyecto Windows Forms</MudText>
+                    </div></a>
+                </div>
+                <div class="proyecto"><a href="https://github.com/JuanManuel753/BlazorPeliculasNet5IdentityServer4" target="_blank">
+                    <img src="img/Portfolio/Proyecto BlazorPeliculas.jpg" alt="">
+                    <div class="overlay">
+                        <MudText Typo="Typo.h6">Proyecto Blazor WebAssembly Peliculas</MudText>
                     </div></a>
                 </div>
                 <div class="proyecto">
-                    <img src="img/p2.jpg" alt="">
+                    <img src="img/Portfolio/Proyecto Formularios.jpg" alt=""><a href="https://github.com/JuanManuel753/BlazorPeliculasNet5IdentityServer4" target="_blank">
                     <div class="overlay">
-                        <h3></h3>
-                        <p>Fotografía</p>
-                    </div>
-                </div>
-                <div class="proyecto">
-                    <img src="img/p3.jpg" alt="">
-                    <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
-                    </div>
-                </div>
-                <div class="proyecto">
-                    <img src="img/p4.jpg" alt="">
-                    <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
-                    </div>
-                </div>
-                <div class="proyecto">
-                    <img src="img/p5.jpg" alt="">
-                    <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
-                    </div>
-                </div>
-                <div class="proyecto">
-                    <img src="img/p6.jpg" alt="">
-                    <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
-                    </div>
+                        <MudText Typo="Typo.h6">Proyecto Blazor WebAssembly Formularios</MudText>
+                    </div></a>
                 </div>
             </div>
         </div>
     </section>
 <footer>
-    <a href="aboutme" class="arriba">
+    <a href="Portfolio" class="arriba">
         <i class="fa-solid fa-angles-up"></i>
     </a>
     <div class="redes">
