--- a/portfolio/Client/Pages/AboutMe.razor
+++ b/portfolio/Client/Pages/AboutMe.razor
@@ -16,7 +16,8 @@
             <MudText Style="font-family: 'Righteous'; text-align: center;padding: 20px;" Typo="Typo.h3">SOBRE MÍ</MudText>
             
 
-            <MudText Typo="Typo.body2" Style="margin-bottom:10px;"><span>Hola, soy Juan Manuel Ramirez Hernandez.</span></MudText>
+            <MudText Typo="Typo.body2"><span>Hola, soy Juan Manuel Ramirez Hernandez.</span> Me gusta todo lo que tiene que ver con desarrollos ya sean web o escritorio. Soy una persona responsable y comprometida con mi trabajo, constantemente siempre estoy aprendiendo todo tipo de nuevas tecnologias y herramientas  para que mis habilidades mejoren.</MudText>
+            <MudText Typo="Typo.body2" Style="margin-bottom:10px;"> Puedes ver algunos de mis proyectos realizados en la seccion de portafolio.</MudText>
 
             <div class="fila">
                 <!-- datos personales -->
