--- a/portfolio/Client/Pages/Portfolio.razor
+++ b/portfolio/Client/Pages/Portfolio.razor
@@ -27,8 +27,8 @@
                         <MudText Typo="Typo.h6">Proyecto Blazor WebAssembly Peliculas</MudText>
                     </div></a>
                 </div>
-                <div class="proyecto">
-                    <img src="img/Portfolio/Proyecto Formularios.jpg" alt=""><a href="https://github.com/JuanManuel753/BlazorPeliculasNet5IdentityServer4" target="_blank">
+                <div class="proyecto"><a href="https://github.com/JuanManuel753/ProyectoEmcartago" target="_blank">
+                    <img src="img/Portfolio/Proyecto Formularios.jpg" alt="">
                     <div class="overlay">
                         <MudText Typo="Typo.h6">Proyecto Blazor WebAssembly Formularios</MudText>
                     </div></a>
