--- a/portfolio/Client/Pages/AboutMe.razor.css
+++ b/portfolio/Client/Pages/AboutMe.razor.css
@@ -15,13 +15,14 @@ html {
     padding: 50px 20px;
     height: auto;
     background-color: #1e2326;
-    height: 150vh;
+    height: 185vh;
 }
 
     .sobremi .contenido-seccion {
         max-width: 1100px;
         margin: auto;
         margin-top: 180px;
+        height:auto;
     }
 
     .sobremi h2 {
