--- a/portfolio/Client/_Imports.razor
+++ b/portfolio/Client/_Imports.razor
@@ -9,3 +9,5 @@
 @using portfolio.Client
 @using portfolio.Client.Shared
 @using MudBlazor
+@using Microsoft.Extensions.Localization
+@using portfolio.Client.ResourceLanguage
